---
title: Aufgabe 1 Klassendiagramm
---
classDiagram
    class Main {
        +main(String[] args)$ void
    }

    class Exam {
        -String name
        -int mnr
        -Double grade
        +Exam(String, int, Double)
        +getName() String
        +setName(String) void
        +getMnr() int
        +setMnr(int) void
        +getGrade() double
        +setGrade(double) void
    }

    class Aniel {
        -int age
        -int motivation
        +Aniel(int, int)
        +getAge() int
        +setAge(int) void
        +getMotivation() int
        +setMotivation(int) void
        +evaluate() double
    }

    class EvaluationHelper {
        +passesCount(ArrayList~Exam~) int
        +failuresCount(ArrayList~Exam~) int
        +getAverage(ArrayList~Exam~) double
    }

    Main o-- Exam
    Main o-- Aniel
    Main o-- EvaluationHelper
    EvaluationHelper o-- Exam
